--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i>SadChat</h1>
+				<h1><i class="fas fa-heart-broken"></i> SadChat</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -33,12 +33,12 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
+							<option value="Sadness">Sadness</option>
+							<option value="HeartBreak">Heart Break</option>
+							<option value="Blues">Blues</option>
+							<option value="Dhokha">Dhokha</option>
+							<!-- <option value="Ruby">Ruby</option>
+							<option value="Java">Java</option> -->
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
