--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>SadChat</title>
+		<title>ChatRoom</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-heart-broken"></i> SadChat</h1>
+				<h1><i class="fas fa-comments"></i> ChatRoom</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -33,10 +33,10 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="Sadness">Sadness</option>
-							<option value="HeartBreak">Heart Break</option>
-							<option value="Blues">Blues</option>
-							<option value="Dhokha">Dhokha</option>
+							<option value="Medicine">Medicine</option>
+							<option value="Politics">Politics</option>
+							<option value="Gaming">Gaming</option>
+							<option value="General">General</option>
 							<!-- <option value="Ruby">Ruby</option>
 							<option value="Java">Java</option> -->
 						</select>
